<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.aldhykohar.submissionjetpack.data.repository.local.entity.DetailEntity" />

        <variable
            name="genre"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        tools:context=".activities.TVShowDetailsActivity">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone">

            <include layout="@layout/placeholder_details" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <ScrollView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivImgBackground"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:contentDescription="@string/app_name"
                    android:orientation="horizontal"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow_back"
                    app:backgroundTint="@color/colorPrimary"
                    app:fabSize="mini"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <View
                    android:id="@+id/viewFadingEdge"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/background_gradient_movie"
                    app:layout_constraintBottom_toBottomOf="@id/ivImgBackground"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivMovies"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:elevation="@dimen/dimen_4"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@id/ivImgBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivImgBackground"
                    app:riv_corner_radius="@dimen/dimen_8" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{model.title}"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivMovies"
                    app:layout_constraintTop_toBottomOf="@id/ivImgBackground"
                    tools:text="@string/movies" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_reguler"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{genre}"
                    android:textColor="@color/colorGreyMedium"
                    android:textSize="@dimen/text_12"
                    app:layout_constraintEnd_toEndOf="@id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    tools:text="@string/movies" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_reguler"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{model.releaseDate}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_12"
                    app:layout_constraintEnd_toEndOf="@id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvGenre"
                    tools:text="@string/movies" />

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/ringkasan"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintStart_toStartOf="@+id/ivMovies"
                    app:layout_constraintTop_toBottomOf="@+id/ivMovies" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_4"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/textDescription"
                    app:layout_constraintStart_toStartOf="@+id/textDescription"
                    app:layout_constraintTop_toBottomOf="@+id/textDescription" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_reguler"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="2dp"
                    android:maxLines="4"
                    android:text="@{model.overview}"
                    android:textColor="@color/colorGreyMedium"
                    android:textSize="@dimen/text_12"
                    app:layout_constraintTop_toBottomOf="@+id/view4"
                    tools:layout_editor_absoluteX="16dp"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/tvReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/nunito_bold"
                    android:includeFontPadding="false"
                    android:text="@string/selengkapnya"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/tvDesc"
                    app:layout_constraintTop_toBottomOf="@id/tvDesc" />

                <View
                    android:id="@+id/viewDivider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:background="@color/colorSilver"
                    app:layout_constraintTop_toBottomOf="@id/tvReadMore" />

                <LinearLayout
                    android:id="@+id/layoutMisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_baseline_star_24"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tvRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/nunito_reguler"
                        android:includeFontPadding="false"
                        android:text="@{String.valueOf(model.voteAverage)}"
                        android:textColor="@color/colorGreyDark"
                        android:textSize="12sp"
                        tools:text="@string/movies" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2022"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvVoteCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/nunito_reguler"
                        android:includeFontPadding="false"
                        android:text='@{model.voteCount+" views"}'
                        android:textColor="@color/colorGreyDark"
                        android:textSize="12sp"
                        tools:text="@string/movies" />

                </LinearLayout>

                <View
                    android:id="@+id/viewDivider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:background="@color/colorSilver"
                    app:layout_constraintTop_toBottomOf="@id/layoutMisc" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
            app:tint="@color/white"
            android:contentDescription="@string/favorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>